--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "clib",
         "cntvct",
         "constness",
+        "ctypes",
         "debugbuild",
         "demangle",
         "Demangled",
@@ -58,6 +59,7 @@
         "pybind",
         "pycache",
         "pyproject",
+        "Pythonian",
         "PYTHONPATH",
         "qwertyuiopasdfghjklzxcvbnm",
         "RAII",
@@ -88,6 +90,7 @@
         "unconstructed",
         "valgrind",
         "venv",
+        "vtables",
         "WASD",
         "Wcast",
         "Wdisabled",
