--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,7 @@
         "ggdb",
         "googletest",
         "gtest",
+        "hatchlingplatform",
         "I../include",
         "Iinclude",
         "LDFLAGS",
@@ -80,6 +81,7 @@
         "RVALUEREFERENCE",
         "SCHAR",
         "setuptools",
+        "situationship",
         "skipasserts",
         "stdint",
         "testall",
