basic python tests pass. making entanglement real. +docs.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "debugbuild",
         "demangle",
         "Demangled",
+        "DENTANGLEMENT",
         "displayname",
         "docstrings",
         "DTEST",
@@ -58,8 +59,12 @@
         "multilib",
         "multiset",
         "nanobind",
+        "noexcept",
+        "Noname",
+        "nowthrow",
         "pointee",
         "printhashes",
+        "propigate",
         "pthread",
         "pybind",
         "pycache",
