--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ bin/
 cache/
 entanglement_py_template/entanglement_py_template.py
 entanglement_py_template/libentanglement_py_template.so.1
+entanglement_py_template/__pycache__/entanglement_py_template_test.cpython-312.pyc
+entanglement_py_template/__pycache__/entanglement_py_template.cpython-312.pyc
