formatting and namespace

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     "cSpell.words": [
         "argtypes",
         "asan",
+        "ascontiguousarray",
         "bitfield",
         "CFLAGS",
         "checkasserts",
