numpy and error handling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "cntvct",
         "constness",
         "ctypes",
+        "ctypeslib",
         "debugbuild",
         "demangle",
         "Demangled",
