testing references and pointers

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,6 +71,7 @@
         "pthread",
         "pybind",
         "pycache",
+        "Pylance",
         "pyproject",
         "Pythonian",
         "PYTHONPATH",
