Make licensing pretty.  Optimize more.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,6 +45,8 @@
         "googletest",
         "gtest",
         "hatchlingplatform",
+        "heapified",
+        "Heapify",
         "I../include",
         "Iinclude",
         "LDFLAGS",
@@ -57,9 +59,11 @@
         "LVALUEREFERENCE",
         "mftb",
         "MMIX",
+        "Morwenn",
         "msvc",
         "multilib",
         "multiset",
+        "Musser",
         "nanobind",
         "ndarray",
         "noexcept",
@@ -67,7 +71,6 @@
         "nowthrow",
         "pointee",
         "printhashes",
-        "propigate",
         "pthread",
         "pybind",
         "pycache",
