--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright 2017-2025 Adrian Johnston
+# SPDX-FileCopyrightText: © 2017-2025 Adrian Johnston.
 #
 # A CMake build that uses Google Test instead of the hxTest.h reimplementation.
 # This file is not intended for building a library.
