--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,9 +17,13 @@
             "MIMode": "gdb",
             "setupCommands": [
                 {
-                    "description": "Enable pretty-printing for gdb",
+                    "description": "Enable pretty printing",
                     "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
+                    "ignoreFailures": false
+                },
+                {
+                    "description": "Load custom printers",
+                    "text": "source ${workspaceFolder}/src/hxarray_printer.py"
                 },
                 {
                     "description": "Set Disassembly Flavor to Intel",
