--- a/entanglement_py_template/pyproject.toml
+++ b/entanglement_py_template/pyproject.toml
@@ -1,3 +1,9 @@
+# SPDX-FileCopyrightText: © 2017-2025 Adrian Johnston.
+# SPDX-License-Identifier: MIT
+# This file is licensed under the terms of the LICENSE.md file.
+
+# This is just an example.
+
 # pyproject.toml
 
 [build-system]
