--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,6 +69,7 @@
         "noexcept",
         "Noname",
         "nowthrow",
+        "objfile",
         "pointee",
         "printhashes",
         "pthread",
