+docs memory manager, test new/delete

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -96,6 +96,7 @@
         "setuptools",
         "situationship",
         "skipasserts",
+        "smoketest",
         "stdint",
         "testall",
         "testcmake",
