inheritance with .vtable tested. more complex struct tests passing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -111,6 +111,7 @@
         "unconstructed",
         "valgrind",
         "venv",
+        "vtable",
         "vtables",
         "WASD",
         "Wcast",
