basic array support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "cindex",
         "clib",
         "cntvct",
+        "CONSTANTARRAY",
         "constness",
         "ctypes",
         "ctypeslib",
