working on operators

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
         "displayname",
         "docstrings",
         "DTEST",
+        "dunder",
         "emcc",
         "Emscripten",
         "emsdk",
