nailing down dunder processing. docs.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,7 @@
         "I../include",
         "Iinclude",
         "LDFLAGS",
+        "libc",
         "libentanglement",
         "listsymbols",
         "lpthread",
@@ -75,6 +76,7 @@
         "pointee",
         "printhashes",
         "pthread",
+        "pthreads",
         "pybind",
         "pycache",
         "Pylance",
