--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,7 @@
         "Iinclude",
         "LDFLAGS",
         "libc",
+        "libclang",
         "libentanglement",
         "listsymbols",
         "lpthread",
