--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,7 @@
         "lstdc",
         "lubsan",
         "LVALUEREFERENCE",
+        "memcpy",
         "mftb",
         "MMIX",
         "Morwenn",
