--- a/entanglement_py_template/pyproject.toml
+++ b/entanglement_py_template/pyproject.toml
@@ -2,12 +2,10 @@
 # SPDX-License-Identifier: MIT
 # This file is licensed under the terms of the LICENSE.md file.
 
-# This is just an example.
-
-# pyproject.toml
+# This is just an example pyproject.toml.
 
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools>=61.0", "clang==18.1.8"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
