work in progress

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ entanglement_py_template/entanglement_py_template.py
 entanglement_py_template/libentanglement_py_template.so.1
 entanglement_py_template/__pycache__/entanglement_py_template_test.cpython-312.pyc
 entanglement_py_template/__pycache__/entanglement_py_template.cpython-312.pyc
+entanglement_py_template/entanglement_py_template.egg-info/dependency_links.txt
+entanglement_py_template/entanglement_py_template.egg-info/PKG-INFO
+entanglement_py_template/entanglement_py_template.egg-info/SOURCES.txt
+entanglement_py_template/entanglement_py_template.egg-info/top_level.txt
