--- a/entanglement_example/pyproject.toml
+++ b/entanglement_example/pyproject.toml
@@ -9,7 +9,7 @@ requires = ["setuptools>=61.0", "clang==18.1.8"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "entanglement_py_template"
+name = "entanglement_example"
 version = "0.0.1"
 authors = [
   { name="Your Name", email="your.email@example.com" },
