--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -109,6 +109,7 @@
         "testcoverage",
         "testerrorhandling",
         "testmatrix",
+        "testpythonbindings",
         "teststrip",
         "testwasm",
         "tsan",
