--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,6 @@
 bin/
 cache/
-entanglement_example/entanglement_example.py
-entanglement_example/libentanglement_py_template.so.1
-entanglement_example/__pycache__/entanglement_test.cpython-312.pyc
-entanglement_example/__pycache__/entanglement_example.cpython-312.pyc
-entanglement_example/entanglement_example.egg-info/dependency_links.txt
-entanglement_example/entanglement_example.egg-info/PKG-INFO
-entanglement_example/entanglement_example.egg-info/SOURCES.txt
-entanglement_example/entanglement_example.egg-info/top_level.txt
-entanglement_example/src/entanglement_example.egg-info/dependency_links.txt
-entanglement_example/src/entanglement_example.egg-info/PKG-INFO
-entanglement_example/src/entanglement_example.egg-info/SOURCES.txt
-entanglement_example/src/entanglement_example.egg-info/top_level.txt
-entanglement_example/build/lib/src/__init__.py
-entanglement_example/build/lib/src/entanglement_example.py
-entanglement_example/build/lib/src/entanglement_test.py
-entanglement_example/build/lib/src/entanglement.py
+entanglement_example/build
+entanglement_example/entanglement_example.egg-info
 entanglement_example/src/entanglement_example.py
-entanglement_example/build/lib/entanglement_example/__init__.py
-entanglement_example/build/lib/entanglement_example/entanglement_example.py
-entanglement_example/build/lib/entanglement_example/entanglement_test.py
-entanglement_example/build/lib/entanglement_example/entanglement.py
+entanglement_example/src/libentanglement_py_template.so.1
