--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "clib",
         "cntvct",
         "CONSTANTARRAY",
+        "constexpr",
         "constness",
         "ctypes",
         "ctypeslib",
