--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,3 +1,6 @@
+// SPDX-FileCopyrightText: © 2017-2025 Adrian Johnston.
+// SPDX-License-Identifier: MIT
+// This file is licensed under the MIT license found in the LICENSE.md file.
 {
     "tasks": [
         {
