--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ cache/
 entanglement_example/build
 entanglement_example/entanglement_example.egg-info
 entanglement_example/src/entanglement_example.py
-entanglement_example/src/libentanglement_py_template.so.1
+entanglement_example/src/libentanglement_example.so.1
+entanglement_example/src/__pycache__
