--- a/entanglement_example/pyproject.toml
+++ b/entanglement_example/pyproject.toml
@@ -28,4 +28,4 @@ package-dir = {"entanglement_example" = "src"}
 packages = ["entanglement_example"]
 
 [tool.setuptools.package-data]
-entanglement_example = ["libentanglement_py_template.so.1"]
+entanglement_example = ["libentanglement_example.so.1"]
