--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,7 @@
         "LDFLAGS",
         "libc",
         "libclang",
+        "LIBCXX",
         "libentanglement",
         "listsymbols",
         "lpthread",
