optimize ccache use in debug build.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "asan",
         "ascontiguousarray",
         "bitfield",
+        "ccache",
         "CFLAGS",
         "checkasserts",
         "checkhash",
@@ -80,6 +81,7 @@
         "Noname",
         "nowthrow",
         "objfile",
+        "PIDS",
         "pointee",
         "printhashes",
         "pthread",
