force doxygen to c++20. +docs.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
         "DENTANGLEMENT",
         "displayname",
         "docstrings",
+        "Doxyfile",
         "DTEST",
         "dunder",
         "emcc",
