--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -128,13 +128,18 @@
         "venv",
         "vtable",
         "vtables",
+        "Waggregate",
         "WASD",
         "Wcast",
+        "Wconversion",
+        "Wdate",
         "Wdisabled",
         "Wendif",
         "Werror",
         "Wextra",
         "Wfatal",
+        "Wmissing",
+        "Wredundant",
         "Wshadow",
         "Wstrict",
         "Wundef",
