--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -106,6 +106,7 @@
         "rtti",
         "runtests",
         "RVALUEREFERENCE",
+        "rvalues",
         "SCHAR",
         "setuptools",
         "situationship",
