+EXPECT_FLOAT_EQ +EXPECT_STREQ +gtest-macros

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -113,6 +113,8 @@
         "skipasserts",
         "smoketest",
         "stdint",
+        "STREQ",
+        "STRNE",
         "testall",
         "testcmake",
         "testcoverage",
