reorg slop tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,7 @@
         "lstdc",
         "lubsan",
         "LVALUEREFERENCE",
+        "lvalues",
         "memcpy",
         "mftb",
         "MMIX",
