--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -108,6 +108,7 @@
         "runtests",
         "RVALUEREFERENCE",
         "rvalues",
+        "scanf",
         "SCHAR",
         "setuptools",
         "situationship",
