+hxremove_cvref_t, clean up hxkey.hpp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
         "constness",
         "ctypes",
         "ctypeslib",
+        "cvref",
         "debugbuild",
         "demangle",
         "Demangled",
