+MALLOC_CHECK_, -fsanitize=memory passes.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,7 @@
         "lubsan",
         "LVALUEREFERENCE",
         "lvalues",
+        "MALLOC",
         "memcpy",
         "mftb",
         "MMIX",
