add:  readability-braces-around-statements,   readability-implicit-bool-conversion,   readability-make-member-function-const,   readability-redundant-control-flow,   readability-redundant-member-init,   readability-simplify-boolean-expr,

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,10 +7,12 @@
     ],
 
     "cSpell.words": [
+        "anyofallof",
         "argtypes",
         "asan",
         "ascontiguousarray",
         "bitfield",
+        "bugprone",
         "ccache",
         "CFLAGS",
         "checkhash",
@@ -20,6 +22,7 @@
         "CONSTANTARRAY",
         "constexpr",
         "constness",
+        "cppcoreguidelines",
         "ctypes",
         "ctypeslib",
         "cvref",
@@ -84,6 +87,7 @@
         "Noname",
         "nowthrow",
         "objfile",
+        "optin",
         "PIDS",
         "pointee",
         "printhashes",
