run run-clang-tidy from a database generated by cmake. fixes build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@
 cmake_minimum_required(VERSION 3.10)
 project(Hatchling)
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE BOOL "Enable compile database generation")
+
 file(GLOB SOURCES "src/*.c" "src/*.cpp")
 file(GLOB TEST_SOURCES "test/*.c" "test/*.cpp")
 
