enable: misc-confusable-identifiers,   misc-const-correctness,   misc-header-include-cycle,   misc-new-delete-overloads,   misc-non-copyable-objects,   misc-redundant-expression,   misc-unused-using-decls,

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "ctypes",
         "ctypeslib",
         "cvref",
+        "DCMAKE",
         "debugbuild",
         "demangle",
         "Demangled",
