+ .clang-tidy: cppcoreguidelines-explicit-virtual-functions,   cppcoreguidelines-init-variables,   cppcoreguidelines-rvalue-reference-param-not-moved,   cppcoreguidelines-slicing,   cppcoreguidelines-virtual-class-destructor

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -112,6 +112,7 @@
         "rodata",
         "rtti",
         "runtests",
+        "rvalue",
         "RVALUEREFERENCE",
         "rvalues",
         "scanf",
