+ .clang-tidy cppcoreguidelines-pro-type-cstyle-cast, readability-redundant-casting.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
         "constexpr",
         "constness",
         "cppcoreguidelines",
+        "cstyle",
         "ctypes",
         "ctypeslib",
         "cvref",
