cache google test outside the bin dir

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
 bin/
+cache/
 docs/
-entanglement_example/build
-entanglement_example/entanglement_example.egg-info
-entanglement_example/src/entanglement_example.py
-entanglement_example/src/libentanglement_example.so.1
-entanglement_example/src/__pycache__
