--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,7 @@
         "fdata",
         "fdiagnostics",
         "feenableexcept",
+        "FETCHCONTENT",
         "ffast",
         "ffunction",
         "filt",
