+error: C++ keywords must not depend on the C++ standard library.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,6 +89,7 @@
         "noexcept",
         "Noname",
         "nowthrow",
+        "nullptr",
         "objfile",
         "optin",
         "PIDS",
