working on msvc port

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,12 @@ target_link_libraries(
 
 target_include_directories(hxtest PRIVATE ${CMAKE_SOURCE_DIR}/include)
 target_compile_definitions(hxtest PRIVATE HX_USE_GOOGLE_TEST)
-target_compile_options(hxtest PRIVATE -fno-exceptions -ggdb3)
+target_compile_options(
+  hxtest
+  PRIVATE
+    $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-fno-exceptions>
+    $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-ggdb3>
+)
 
 # Download GoogleTest into a local workspace cache to avoid AI sandbox issues.
 # CMake will still have to be run once to set up the cache after running
@@ -55,6 +60,7 @@ FetchContent_Declare(
   URL https://github.com/google/googletest/releases/download/v1.15.2/googletest-1.15.2.tar.gz
   DOWNLOAD_EXTRACT_TIMESTAMP TRUE
 )
+set(gtest_force_shared_crt ON CACHE BOOL "Link GoogleTest with shared CRT on MSVC" FORCE)
 FetchContent_MakeAvailable(googletest)
 
 # Use CMake to check that the tests are enumerable.
