tests starting to pass on windows

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -135,6 +135,7 @@
         "testpythonbindings",
         "teststrip",
         "testwasm",
+        "thrd",
         "tsan",
         "ubsan",
         "ulonglong",
